--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://www.youtube.com/iframe_api"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
