--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Konseling Satir</title>
-    
+
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,7 +41,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+    <script
+      src="https://apis.google.com/js/platform.js?onload=renderButton"
+      async=""
+      defer=""
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
